--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="stylesheet" href="Index.css">
   
- <title>3Fins Diving</title>
+ <title>Portfolio - Digital Service Design</title>
   
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,9 +12,7 @@
   
 <body>
  <header>
-  <video autoplay muted loop id="myVideo">
-  <source src="headervideo.mp4" type="video/mp4">
-  </video>
+
  </header>
 
 <ul>
@@ -41,7 +39,7 @@
  </div>
   
 <footer>
-  <p>Anni Perttula, 2022</p>
+  <p>Anni Perttula, 2023</p>
     <a href="https://validator.w3.org/check?uri=referer">
       <img style="border:none;height:31px;width:31px;text-decoration:none;"
        src="htmlLogo.png"
