--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
  </header>
 
 <ul>
-  <li><b><a href="index.html" title="Home Page">Home</a></b></li>
-  <li><b><a href="ourTeam.html" title="Our Team">Our Team</a></b></li>
+  <li><b><a href="index.html" title="About Me">Home</a></b></li>
+  //*<li><b><a href="ourTeam.html" title="Our Team">Our Team</a></b></li>
   <li><b><a href="services.html" title="Services">Services</a></b></li>
   <li><b><a href="pastEvent.html" title="Past Events">Past Events</a></b></li>
   <li><b><a href="gallery.html" title="Gallery">Gallery</a></b></li>
-  <li><b><a href="bookus.html" title="Book us for event" >Book us!</a></b></li> 
+  <li><b><a href="bookus.html" title="Book us for event" >Book us!</a></b></li> *//
 </ul>
 
  <div>
@@ -30,16 +30,16 @@
   </nav>
   
   <article>
-    <h2>Welcome!</h2>
+    <h2>Hello!</h2>
   
-    <p>3Fins Diving offers breathtaking moments underwater! We specialize in underwater entertainment and speciality diving. Our motto is that everything can contain magic! </p>
-    <p>3Fins diving is a team of underwater performers and diving specialist, logistic and light/sounds specialists who together create performances for all kinds of events.
+    <p> Welcome to my page that contains my portfolio for Haaga-Helia Digital Service Design course Spring semester 2024. </p>
+    <p> From this website you can find everything related to our digital service design project and my final reflections on the course subjects per theme.</p>
   </article>
   </section>
  </div>
   
 <footer>
-  <p>Anni Perttula, 2023</p>
+  <p>Anni Perttula, 2024</p>
     <a href="https://validator.w3.org/check?uri=referer">
       <img style="border:none;height:31px;width:31px;text-decoration:none;"
        src="htmlLogo.png"
