--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
  </header>
 
 <ul>
-  <li><b><a href="index.html" title="About Me">Home</a></b></li>
-  /*<li><b><a href="ourTeam.html" title="Our Team">Our Team</a></b></li>
-  <li><b><a href="services.html" title="Services">Services</a></b></li>
+  <li><b><a href="index.html" title="Index">Home</a></b></li>
+  <li><b><a href="aboutMe.html" title="About Me">About Me</a></b></li>
+  /*<li><b><a href="services.html" title="Services">Services</a></b></li>
   <li><b><a href="pastEvent.html" title="Past Events">Past Events</a></b></li>
   <li><b><a href="gallery.html" title="Gallery">Gallery</a></b></li>
   <li><b><a href="bookus.html" title="Book us for event" >Book us!</a></b></li> */
