--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="Index.css">
+  <link rel="stylesheet" href="index.css">
   
-  <title>3Fins Diving</title>
+  <title>About Me</title>
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
