--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-<link rel="stylesheet" href="Index.css">
+<link rel="stylesheet" href="index.css">
   
  <title>Portfolio - Digital Service Design</title>
   
