--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="aboutMe.css">
   
   <title>About Me</title>
   
