--- a/aboutMe.html
+++ b/aboutMe.html
@@ -28,7 +28,7 @@
   
  <article>
     <h2>About Me</h2>
-    <p>On this page you can learn a little bit more about our team behind the magic. To make magic, you need some magicians! Here is our current team behind events and shows wihtin Finland. </p> 
+    <p>On this page you can learn a little bit more about me. </p> 
    </br>
      </br>
     
