--- a/aboutMe.html
+++ b/aboutMe.html
@@ -33,8 +33,10 @@
      </br>
     
    
-      <p>dgjhg iushfsidu siugfsd g aiegos ydgfofgao yfga aifgao uyfgaoufygagfau  >br> dfhsldfg sdfgsdf  sfg soufyg gdfsuydgf soudyg
-        sjhdglsdghsldjgh ld fgld lsdghl s l sdlgh sldghss ldjhgf sdhgsldhgfsldhfg sljd  
+      <p> Write a short description of your current skills and knowledge concerning digital services design.
+Which of the previous courses you have passed (Orientation to Digital Services, Orientation to Software Engineering, Digital User Experience, Digital Service Prototyping)? What tools and methods you know that can be used in digital service design and prototyping?
+Your aims and objectives: what are you interests within the field of Digital Services/Information Technology in general and especially concerning the objectives of this course?
+Are there any known obstacles on your way? What are you enthusiastic about?</p>
       <p>sldghsl dlsdhf lsdjh lsdfh sldhfgls dhsl hdg fshdf</p>
     </br>
     </br>
