--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,7 +12,13 @@
 
 <body>
   <header>
-  
+   <img src="header.jpg" alt="Header" class="responsive">
+    <style>
+    .responsive {
+      width: 100%;
+     height: auto;
+      }
+    </style>
   </header>
 
   <ul>
