--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-   <img src="header.jpg" alt="Header" class="responsive">
+   <img src="header1.jpg" alt="Header" class="responsive">
     <style>
     .responsive {
       width: 100%;
