--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="aboutMe.css">
   
-  <title>About Me</title>
+  <title>Self-Introduction</title>
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
