--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <ul>
   <li><b><a href="index.html" title="Index">Home</a></b></li>
-  <li><b><a href="aboutMe.html" title="About Me">About Me</a></b></li>
+  <li><b><a href="aboutMe.html" title="aboutMe">Self-Introduction</a></b></li>
   
 </ul>
 
