--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <h2>Hello!</h2>
   
     <p> Welcome to my page that contains my portfolio for Haaga-Helia Digital Service Design course Spring semester 2024. </p>
-    <p> From this website you can find everything related to our digital service design project and my final reflections on the course subjects per theme.</p>
+    <p> From this website you can find everything related to our digital service design project and my final reflections on the course subjects per theme. You can click the different tabs to navigate each themes of this project.</p>
+  </br>
+  </br>
   </article>
   </section>
  </div>
