--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <ul>
   <li><b><a href="index.html" title="Index">Home</a></b></li>
   <li><b><a href="aboutMe.html" title="aboutMe">Self-Introduction</a></b></li>
-  
+  <li><b><a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a></b></li>
 </ul>
 
  <div>
