--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,7 +24,7 @@
   <ul>
     <li><b><a href="index.html" title="Home">Home</a></b></li>
     <li><b><a href="aboutMe.html" title="About Me">Self-Introduction</a></b></li>
-   
+    <li><b><a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a></b></li>
   </ul>
   
   <div>
