--- a/a2.html
+++ b/a2.html
@@ -21,11 +21,21 @@
     </style>
   </header>
 
-  <ul>
-    <li><b><a href="index.html" title="Home">Home</a></b></li>
-    <li><b><a href="aboutMe.html" title="About Me">Self-Introduction</a></b></li>
-    <li><b><a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a></b></li>
-  </ul>
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="Project Reflections">News</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="index.html" title="Home">Home</a>
+      <a href="aboutMe.html" title="About Me">Self-Introduction</a>
+      <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
+    </div>
+  </div>
+</div>
+
   
   <div>
    <section>
