--- a/a2.html
+++ b/a2.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div>
+  <div class="left-column">
     <section>
       <nav>
         <!-- Your navigation content goes here if needed -->
