--- a/a2.html
+++ b/a2.html
@@ -15,9 +15,9 @@
 
   <div class="navbar">
     <a href="#home">Home</a>
-    <a href="ProjectReflections.html">Project Reflections</a>
+    <a href="a2.html">Project Reflections</a>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown
+      <button class="dropbtn">Project Reflections
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
