--- a/a2.html
+++ b/a2.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="a2.css">
-  <title>Self-Introduction</title>
+  <title>Project reflections</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -14,8 +14,8 @@
   </header>
 
   <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="a2.html">Project Reflections</a>
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html">Self-Introduction</a>
     <div class="dropdown">
       <button class="dropbtn">Project Reflections
         <i class="fa fa-caret-down"></i>
