--- a/a2.html
+++ b/a2.html
@@ -39,6 +39,51 @@
         HTML and CSS basics became familiar to me during our first-year classes, especially during the Introduction to Digital Services course held by Kasper Valtakari. 
         During the course, our goal was to build our responsive website for an imaginary customer. I chose to make a website for my own entertainment small business, 3Fins Diving. 
         You can view the project <a href="https://anpertt.github.io/3FinsDiving/">HERE</a>.</p>
+        <p>Most of the basic structures of html and CSS was familiar to me and also the reason why I decided to record my learning portfolio with GitHub instead of other much easier platforms.
+          I had a good base layout for website I generated during introduction course and that I have kept, modified and used as base for other projects. The same base I used as a root code for this learning portfolio too. 
+          Here is a part of Html code created for this webite that you are currently viewing:</p>
+        
+        <div class="w3-panel w3-card-4 w3-light-grey" style="width:50%">
+          <p class=" w3-large w3-serif">
+          <i class="fa fa-quote-right w3-xxlarge w3-text-red"></i><br>
+           <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <link rel="stylesheet" href="a2.css">
+  <title>Project reflections</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+  <header>
+    <img src="header3.jpg" alt="Header" class="responsive">
+  </header>
+
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html">Self-Introduction</a>
+    <div class="dropdown">
+      <button class="dropbtn">Project Reflections
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="left-column">
+    <section>
+      <nav>
+        <!-- Your navigation content goes here if needed -->
+      </nav>
+
+      <article>
+        <h2>A2: W3 CSS Tutorial Reflections</h2></p>
+        </div>
+        
       </article>
 
       <nav>
