--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <body>
  <header>
- <img src="newHeader.jpg" alt="Header" class="responsive">
+ <img src="textheader.jpg" alt="Header" class="responsive">
     <style>
     .responsive {
       width: 100%;
