--- a/a2.html
+++ b/a2.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <img src="header3.jpg" alt="Header" class="responsive">
+    <img src="portfolio.jpg" alt="Header" class="responsive">
   </header>
 
   <div class="navbar">
