--- a/a2.html
+++ b/a2.html
@@ -2,15 +2,23 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="a2.css">
-  <title>Project reflections</title>
+  <link rel="stylesheet" href="aboutMe.css">
+  
+  <title>A2: W3 CSS Tutorial Reflections</title>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <header>
-    <img src="portfolio.jpg" alt="Header" class="responsive">
+   <img src="portfolio.jpg" alt="Header" class="responsive">
+    <style>
+    .responsive {
+      width: 100%;
+     height: auto;
+      }
+    </style>
   </header>
 
   <div class="navbar">
@@ -26,13 +34,13 @@
     </div>
   </div>
 
-  <div class="left-column">
-    <section>
-      <nav>
-        <!-- Your navigation content goes here if needed -->
-      </nav>
-
-      <article>
+  
+<div>
+  <section>
+    <nav>
+    </nav>
+  
+    <article>
         <h2>A2: W3 CSS Tutorial Reflections</h2>
         <p>Week 1, the first task to learning portfolio reflections.</p>
         <p>Working with website creation is a subject I have previously explored a couple of times during my studies at Haaga-Helia University of Applied Science. 
@@ -46,24 +54,24 @@
         Here is a part of HTML code created for this webite that you are currently viewing:</p>
        </br>
        <img src="code.jpg" alt="Page code">
-    
-      </article>
+       </br>
+    </article>
+  </section>
+</div>
 
-      <nav>
-        <!-- Your navigation content goes here if needed -->
-      </nav>
-    </section>
-  </div>
-
-  <footer>
-    <p>Anni Perttula, 2024</p>
+<footer>
+ <p>Anni Perttula, 2024</p>
     <a href="https://validator.w3.org/check?uri=referer">
-      <img style="border:none;height:31px;width:31px;text-decoration:none;" src="htmlLogo.png" alt="Valid HTML" />
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-      <img style="border:none;width:88px;height:31px;text-decoration:none;" src="cssLogo.png" alt="Valid CSS" />
-    </a>
-  </footer>
-</body>
+      <img style="border:none;height:31px;width:31px;text-decoration:none;"
+       src="htmlLogo.png"
+       alt="Valid HTML"/></a>
 
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+       <img style="border:none;width:88px;height:31px;text-decoration:none;"
+        src="cssLogo.png"
+        alt="Valid CSS" /></a>
+      </p>
+</footer>
+
+</body>
 </html>
