--- a/a2.html
+++ b/a2.html
@@ -53,8 +53,10 @@
         I had a good base layout for website I generated during introduction course that I have kept, modified and used as base for other projects. The same base I used as a root code for this learning portfolio. 
         Here is a part of HTML code created for this webite that you are currently viewing:</p>
        </br>
-       <img src="code.jpg" alt="Page code">
+       <img src="code.jpg" alt="Page HTML code">
        </br>
+
+       <img src="codecss.jpg" alt="Page CSS code">
     </article>
   </section>
 </div>
