--- a/a2.html
+++ b/a2.html
@@ -43,6 +43,7 @@
     <article>
         <h2>A2: W3 CSS Tutorial Reflections</h2>
         <p>Week 1, the first task to learning portfolio reflections.</p>
+        </br>
         <p>Working with website creation is a subject I have previously explored a couple of times during my studies at Haaga-Helia University of Applied Science. 
         HTML and CSS basics became familiar to me during our first-year classes, especially during the Introduction to Digital Services course held by Kasper Valtakari. 
         During the course, our goal was to build responsive website for a cause of our choosing, completed with visuals, flexboxes, appropriate color schemes completed with W3C HTML and CSS validation.  
@@ -55,8 +56,17 @@
        </br>
        <img src="code.jpg" alt="Page HTML code">
        </br>
-
+       <p>Below we can view a snippet of this webpages CSS code, more specifically the part that modifies dropdown menu's styles. 
+         Color references were modified from last projects and dropdown menu added to serve the usability of this website better. </p>
+       </br>
        <img src="codecss.jpg" alt="Page CSS code">
+       </br>
+       <p>In the tutorial video, which can be viewed behind this <a href="https://youtu.be/PJHBKwbf4Us?si=DEokwgEkD8nIEC_v">LINK</a>, were a lot of good pointers to more efficient website building. During Introduction to Digital Services course one of our main resources 
+       was W3 Schools too. Using W3 library for building has become a habbit and when building I use W3 library often to shop for features or refresh memory. The tutorial also
+       made me rethink my way of coding, especially HTML. In the tutorial Brad used a lot of classes in HTML coding to combine styling in both HTML and CSS code. He used a lot of
+       fast optioned styling like commands red, button or right and left. I have strictly kept all styling in CSS. Brad almost appeared to use CSS as a fine tuning tool to correct
+       the styling he didn't quite achieve in HTML code. A approach I will definately try in my next project. I am also going to see if I could refine already existing code from this website to be more efficiently built through class building in HTML. </p>
+       
     </article>
   </section>
 </div>
