--- a/a2.html
+++ b/a2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="aboutMe.css">
+  <link rel="stylesheet" href="a2.css">
   
   <title>A2: W3 CSS Tutorial Reflections</title>
   
