--- a/aboutMe.html
+++ b/aboutMe.html
@@ -30,6 +30,7 @@
       </button>
       <div class="dropdown-content">
         <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
+        <a href="a3.html" title="A3: Building Team Web Portfolio">A3: Building Team Web Portfolio</a>
       </div>
     </div>
   </div>
