--- a/a2.html
+++ b/a2.html
@@ -67,7 +67,8 @@
        </br>
        <p>In the tutorial video, which can be viewed behind this <a href="https://youtu.be/PJHBKwbf4Us?si=DEokwgEkD8nIEC_v">LINK</a>, were a lot of good pointers to more efficient website building. During Introduction to Digital Services course one of our main resources 
        was W3 Schools too. Using W3 library for building has become a habbit and when building I use W3 library often to shop for features or refresh memory. The tutorial also
-       made me rethink my way of coding, especially HTML. In the tutorial Brad used a lot of classes in HTML coding to combine styling in both HTML and CSS code. He used a lot of
+       made me rethink my way of coding, especially HTML.</p> 
+       <p>In the tutorial Brad used a lot of classes in HTML coding to combine styling in both HTML and CSS code. He used a lot of
        fast optioned styling like commands red, button or right and left. I have strictly kept all styling in CSS. Brad almost appeared to use CSS as a fine tuning tool to correct
        the styling he didn't quite achieve in HTML code. A approach I will definately try in my next project. I am also going to see if I could refine already existing code from this website to be more efficiently built through class building in HTML. </p>
        </br>
