--- a/a3.html
+++ b/a3.html
@@ -43,9 +43,10 @@
   
     <article>
         <h2>A3: Building Team Web Portfolio</h2>
+        <p>Week 1, reflections on building a Team Web Portfolio</p>
         </br> 
-      <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findingd. Whole team agreed Wix being 
-      flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
+        <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findingd. Whole team agreed Wix being 
+        flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
         affected our decision on platform. You can access our Team Portfolio webpage HERE</p>
         
     </article>
