--- a/a3.html
+++ b/a3.html
@@ -47,7 +47,7 @@
         </br> 
         <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findingd. Whole team agreed Wix being 
         flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
-        affected our decision on platform. You can access our Team Portfolio webpage HERE</p>
+        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site-3">HERE</a></p>
         
     </article>
   </section>
