--- a/a3.html
+++ b/a3.html
@@ -45,9 +45,11 @@
         <h2>A3: Building Team Web Portfolio</h2>
         <p>Week 1, reflections on building a Team Web Portfolio</p>
         </br> 
-        <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findingd. Whole team agreed Wix being 
+        <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findings. Whole team agreed on Wix being 
         flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
-        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site-3">HERE</a></p>
+        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site-3">HERE</a> for a closer look on our project progress.</p>
+        <p>Wix allows multiple page managers and editors so working online, independently or distant, is also possible and crucial feature for our team. Any of the team members can edit Team Portfolio
+        anytime, anywhere. </p>
         
     </article>
   </section>
