--- a/a2.html
+++ b/a2.html
@@ -49,7 +49,7 @@
         HTML and CSS basics became familiar to me during our first-year classes, especially during the Introduction to Digital Services course held by Kasper Valtakari. 
         During the course, our goal was to build responsive website for a cause of our choosing, completed with visuals, flexboxes, appropriate color schemes completed with W3C HTML and CSS validation.  
         I chose to create a mock-up website for my own small business, 3Fins Diving. 
-        Preparation and execution of the project took approximately 7 weeks and the finished product can viewed <a href="https://anpertt.github" target="_blank">HERE</a>.</p>
+        Preparation and execution of the project took approximately 7 weeks and the finished product can viewed <a href="https://anpertt.github.io/3FinsDiving/" target="_blank">HERE</a>.</p>
        
         <p>Most of the basic structures of HTML and CSS was familiar to me, and also the reason why, I decided to record my learning portfolio with GitHub instead of other more fluid platforms.
         I had a good base layout for website I generated during introduction course that I have kept, modified and used as base for other projects. The same base I used as a root code for this learning portfolio. 
