--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="dropdown-content">
         <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
         <a href="a3.html" title="A3: Building Team Web Portfolio">A3: Building Team Web Portfolio</a>
+        <a href="a4.html" title="A4: The Immutable Rules of UX by Jakob Nielsen">A4: The Immutable Rules of UX by Jakob Nielsen</a>
       </div>
     </div>
   </div>
