--- a/a3.html
+++ b/a3.html
@@ -50,7 +50,8 @@
         flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
         affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site" target="_blank">HERE</a> for a closer look on our project progress.</p>
         <p>Wix allows multiple page managers and editors so working online, independently or distant, is also possible and crucial feature for our team. Any of the team members can edit Team Portfolio
-        anytime, anywhere. </p>
+        anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically modify a certain block from page. Wix operates based on templates
+        widgets, blocks and ready-made gadgets you can use to piece your own customizable website. Using Wix platform is free and it can be connected to your already existing domains.</p>
         
     </article>
   </section>
