--- a/a3.html
+++ b/a3.html
@@ -51,7 +51,13 @@
         affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site" target="_blank">HERE</a> for a closer look on our project progress.</p>
         <p>Wix allows multiple page managers and editors so working online, independently or distant, is also possible and crucial feature for our team. Any of the team members can edit Team Portfolio
         anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically modify a certain block from page. Wix operates based on templates
-        widgets, blocks and ready-made gadgets you can use to piece your own customizable website. Using Wix platform is free and it can be connected to your already existing domains.</p>
+        widgets, blocks and ready-made gadgets you can use to piece your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
+        platform that requires low effort to master.</p>
+        </br>
+        <img src="wixeditor.jpg" alt="Wix editor view">
+        </br>
+        </br>
+        <p> </p>
         
     </article>
   </section>
