--- a/a3.html
+++ b/a3.html
@@ -49,15 +49,19 @@
         <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findings. Whole team agreed on Wix being 
         flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
         affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site" target="_blank">HERE</a> for a closer look on our project progress.</p>
-        <p>Wix allows multiple page managers and editors so working online, independently or distant, is also possible and crucial feature for our team. Any of the team members can edit Team Portfolio
-        anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically modify a certain block from page. Wix operates based on templates
-        widgets, blocks and ready-made gadgets you can use to piece your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
-        platform that requires low effort to master.</p>
+        <p>Wix allows multiple page editors simultaneosly, so working online, independently or distant, is possible and a very crucial feature for our team. Any of the team members can edit Team Portfolio
+        anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically customizey a certain block. Wix operates based on templates
+        widgets, blocks and ready-made gadgets that can be used to create your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
+        layout that requires minimal effort to master.</p>
+        </br>
         </br>
         <img src="wixeditor.jpg" alt="Wix editor view">
         </br>
         </br>
-        <p> </p>
+        <p>We completed our first week's task of creating the page and adding welcome and team members feature rather fast. After dividing tasks for first week each team member
+        was able to work on the project according to their own availability. Common deadline was set to match with given submission deadlines on Moodle. This made first week of tasks
+        highly efficient and workload was spread evenly. This way of working has proven to work for our team and we plan to execute same working habit on our next task. For further progress we are going to
+        need a task manager or team moderator who is responsible for overall deadlines and monitoring workload. </p>
         
     </article>
   </section>
