--- a/a3.html
+++ b/a3.html
@@ -53,13 +53,15 @@
         anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically customizey a certain block. Wix operates based on templates
         widgets, blocks and ready-made gadgets that can be used to create your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
         layout that requires minimal effort to master.</p>
-        <p>We completed our first week's task of creating the page and adding welcome and team members feature rather fast. After dividing tasks for first week each team member
-        was able to work on the project according to their own availability. Common deadline was set to match with given submission deadlines on Moodle. This made first week of tasks
-        highly efficient and workload was spread evenly. This way of working has proven to work for our team and we plan to execute same working habit on our next task. For further progress we are going to
-        need a task manager or team moderator who is responsible for overall deadlines and monitoring workload. </p>
-        </br>
         </br>
         <img src="wixeditor.jpg" alt="Wix editor view">
+        </br>
+        </br>
+        <p>We completed our first week's task of creating the page and adding welcome and team members feature rather fast. After dividing tasks for first week each team member was able to work on the project 
+        according to their own availability. Common deadline was set to match with given submission deadlines on Moodle. This made first week of tasks highly efficient and workload was spread evenly. 
+        This way of working has proven to work for our team and we plan to execute same working habit on our next task. For further progress we are going to need a task manager or team moderator who is 
+        responsible for overall deadlines and monitoring workload.</p>
+        </br>
         </br>
         </br>
     </article>
