--- a/a2.html
+++ b/a2.html
@@ -46,21 +46,25 @@
         <h2>A2: W3 CSS Tutorial Reflections</h2>
         <p>Week 1, the first task to learning portfolio reflections.</p>
         </br>
-        <p>Working with website creation is a subject I have previously explored a couple of times during my studies at Haaga-Helia University of Applied Science. 
-        HTML and CSS basics became familiar to me during our first-year classes, especially during the Introduction to Digital Services course held by Kasper Valtakari. 
-        During the course, our goal was to build responsive website for a cause of our choosing, completed with visuals, flexboxes, appropriate color schemes completed with W3C HTML and CSS validation.  
-        I chose to create a mock-up website for my own small business, 3Fins Diving. 
-        Preparation and execution of the project took approximately 7 weeks and the finished product can viewed <a href="https://anpertt.github.io/3FinsDiving/" target="_blank">HERE</a>.</p>
+        <p>Working with website creation is a subject I have previously explored couple of times during my studies at Haaga-Helia University of Applied Science. 
+          HTML and CSS basics became familiar to me during our first-year classes, especially during the Introduction to Digital Services course held by Kasper Valtakari. 
+          During the course, our goal was to build responsive website for a cause of our choosing, completed with visuals, flexboxes, appropriate colour schemes all 
+          verified with W3C HTML and CSS validation. The webpage had to meet minimal needs of 4 pages in addition to landing page, gallery, on page images, links, texts 
+          with varying fonts and sizes. Everything had to be tied into a visual package fit for a real customer.</p>
        
-        <p>Most of the basic structures of HTML and CSS was familiar to me, and also the reason why, I decided to record my learning portfolio with GitHub instead of other more fluid platforms.
-        I had a good base layout for website I generated during introduction course that I have kept, modified and used as base for other projects. The same base I used as a root code for this learning portfolio. 
-        Here is a part of HTML code created for this webite that you are currently viewing:</p>
+        <p>I chose to create a mock-up website for my small business, 3Fins Diving. Preparation and execution of the project took approximately 7 weeks, and the 
+          finished product can view <a href="https://anpertt.github.io/3FinsDiving/" target="_blank">HERE</a>. During the course I was able to create a solid 
+          webpage base template for myself to use in future projects. I coded a basic layout for introduction course, and I have since modified it after each project. 
+          It is a base of HTML and CSS that can be easily customized for any project. The same base I used as a root code for this learning portfolio. Here is a part 
+          of HTML code created for this website that you are currently viewing:</p>
        </br>
        <img src="code.jpg" alt="Page HTML code">
        </br>
        </br>
-       <p>Below we can view a snippet of this webpages CSS code, more specifically the part that modifies dropdown menu's styles. 
-       Color references were modified from last projects and dropdown menu added to serve the usability of this website better. </p>
+       <p>Most of the basic structures of HTML and CSS was familiar to me, and the reason why, I decided to record my learning portfolio with GitHub instead of other more 
+         fluid platforms. I knew we would most likely end up with a different platform with our team regarding Team Web Portfolio for this project, so I wanted to challenge 
+         myself and refresh my memory on HTML and CSS coding. Below we can view a snippet of this webpages CSS code, more specifically the part that modifies dropdown menu's
+         styles. Colour references were modified from last project and dropdown menu added instead of horizontal menu to serve the usability of this website better.</p>
        </br>
        <img src="codecss.jpg" alt="Page CSS code">
        </br>
