--- a/a2.html
+++ b/a2.html
@@ -75,8 +75,7 @@
          and was reinforced during all digital service courses. When building, I use W3 library often to shop for features or refresh memory. The tutorial also made me rethink my way of 
          coding, especially HTML.</p> 
        <p>Even though main functions in HTML and CSS coding were familiar to me a mor efficient way of coding as seen on the video was not. As someone starting in website building my 
-         code can end up being unnecessarily long and hinder readability. </p>
-       <p>In the tutorial Brad used a lot of classes in HTML coding to combine styling in both HTML and CSS code. He used a lot of fast optioned styling commands like “red”, “button” 
+         code can end up being unnecessarily long and hinder readability. In the tutorial Brad used a lot of classes in HTML coding to combine styling in both HTML and CSS code. He used a lot of fast optioned styling commands like “red”, “button” 
          or “right” and “left”. I have before strictly kept all styling in CSS, separate from any of my HTML files. Brad almost appeared to use CSS as a fine-tuning tool to correct 
          the styling he didn't quite achieve in HTML code. An approach I will try in my next projects. I am going to see if I could refine my already existing code from this website 
          to be more efficiently built through class building in HTML.</p>
