--- a/a3.html
+++ b/a3.html
@@ -48,7 +48,7 @@
         </br> 
         <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findings. Whole team agreed on Wix being 
         flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
-        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site" target="_blank">HERE</a> for a closer look on our project progress.</p>
+        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site-3" target="_blank">HERE</a> for a closer look on our project progress.</p>
         <p>Wix allows multiple page editors simultaneosly, so working online, independently or distant, is possible and a very crucial feature for our team. Any of the team members can edit Team Portfolio
         anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically customizey a certain block. Wix operates based on templates
         widgets, blocks and ready-made gadgets that can be used to create your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
