--- a/a3.html
+++ b/a3.html
@@ -46,13 +46,13 @@
         <h2>A3: Building Team Web Portfolio</h2>
         <p>Week 1, reflections on building a Team Web Portfolio</p>
         </br> 
-        <p>Our team, PixelPioneers, chose Wix as our platform for creating Team Portfolio and to document our porject process and findings. Whole team agreed on Wix being 
-        flexible enough platform that will let us concentrate more on the quality of our research. Our team had previous experience in using WIX as webpage creation tool which also
-        affected our decision on platform. You can access our Team Portfolio webpage <a href="https://bgz904.wixsite.com/my-site-3" target="_blank">HERE</a> for a closer look on our project progress.</p>
-        <p>Wix allows multiple page editors simultaneosly, so working online, independently or distant, is possible and a very crucial feature for our team. Any of the team members can edit Team Portfolio
-        anytime, anywhere. Wix is an easy to use online tool that doesn't require coding, unless you want to specifically customizey a certain block. Wix operates based on templates
-        widgets, blocks and ready-made gadgets that can be used to create your own customizable website. Using Wix platform is free and it can be connected to your already existing domains. Wix has a very user friendly 
-        layout that requires minimal effort to master.</p>
+        <p>For this project we have formed a four-member team that consists of Natàlia Avellà, Neea Ahonen, Vera Mai and me, Anni Perttula. 
+          Our team name for this project is PixelPioneers. Our first task as a team was to choose our platform for creating our Team Web Portfolio for 
+          the Digital Service Design course. Most of the pioneers had experience in multiple different platforms but we ended up choosing online webpage 
+          building platform called Wix as our tool for this project.  On Wix it would be fast and efficient enough to document our project process and key 
+          findings. Team agreed on unison Wix being flexible platform that will let us concentrate more on the quality of our research. We had previous experience 
+          in using WIX as webpage creation tool within our team which also affected our decision making on platform. You can access our Team Portfolio webpage 
+          <a href="https://bgz904.wixsite.com/my-site-3" target="_blank">HERE</a> for a closer look on our project progress.</p>
         </br>
         <img src="wixeditor.jpg" alt="Wix editor view">
         </br>
