--- a/a3.html
+++ b/a3.html
@@ -53,17 +53,21 @@
           findings. Team agreed on unison Wix being flexible platform that will let us concentrate more on the quality of our research. We had previous experience 
           in using WIX as webpage creation tool within our team which also affected our decision making on platform. You can access our Team Portfolio webpage 
           <a href="https://bgz904.wixsite.com/my-site-3" target="_blank">HERE</a> for a closer look on our project progress.</p>
-        </br>
-        <img src="wixeditor.jpg" alt="Wix editor view">
-        </br>
-        </br>
-        <p>We completed our first week's task of creating the page and adding welcome and team members feature rather fast. After dividing tasks for first week each team member was able to work on the project 
-        according to their own availability. Common deadline was set to match with given submission deadlines on Moodle. This made first week of tasks highly efficient and workload was spread evenly. 
-        This way of working has proven to work for our team and we plan to execute same working habit on our next task. For further progress we are going to need a task manager or team moderator who is 
-        responsible for overall deadlines and monitoring workload.</p>
-        </br>
-        </br>
-        </br>
+        <p>Wix is a great platform because it allows multiple page editors simultaneously, so working online independently or remote, is possible and a very 
+          crucial feature for our team. Any of the team members can edit Team Web Portfolio anytime, anywhere. Wix is an easy-to-use online tool that doesn't 
+          require coding unless you want to specifically customize a certain block. Wix operates based on templates, widgets, customizable blocks, and ready-made 
+          gadgets that can be used to create your own customizable website. Wix uses simple drag and drop option as editor tool. Using Wix platform is free, and it
+          can be connected to your already existing domains. Wix has a very user-friendly layout that requires minimal effort to master meaning all team members 
+          can fluently use Wix without long adjustment period. This way we can move on working on our different project phases instead of learning a new tool.</p>
+         </br>
+         <img src="wixeditor.jpg" alt="Wix editor view">
+         </br>
+         </br>
+         <p>We completed our first week's task of creating ta landing page, adding welcome and team members feature rather fast. After dividing tasks for first week, 
+           each team member was able to work on the project at their own pace. Common deadline was set to match with the given submission deadlines on Moodle. This made 
+           first week of tasks highly efficient, and workload was spread evenly. This way of working has proven to work for our team, and we plan to execute same working 
+           habit on our next task. For further progress we are going to need a task manager or team moderator who is responsible for overall deadlines and monitoring workload 
+           in order to keep working fluently. </p>
     </article>
   </section>
 </div>
