--- a/a3.html
+++ b/a3.html
@@ -51,7 +51,7 @@
           the Digital Service Design course. Most of the pioneers had experience in multiple different platforms but we ended up choosing online webpage 
           building platform called Wix as our tool for this project.  On Wix it would be fast and efficient enough to document our project process and key 
           findings. Team agreed on unison Wix being flexible platform that will let us concentrate more on the quality of our research. We had previous experience 
-          in using WIX as webpage creation tool within our team which also affected our decision making on platform. You can access our Team Portfolio webpage 
+          in using Wix as webpage creation tool within our team which also affected our decision making on platform. You can access our Team Portfolio webpage 
           <a href="https://bgz904.wixsite.com/my-site-3" target="_blank">HERE</a> for a closer look on our project progress.</p>
         <p>Wix is a great platform because it allows multiple page editors simultaneously, so working online independently or remote, is possible and a very 
           crucial feature for our team. Any of the team members can edit Team Web Portfolio anytime, anywhere. Wix is an easy-to-use online tool that doesn't 
