--- a/a4.html
+++ b/a4.html
@@ -46,7 +46,22 @@
         <h2>A4: The Immutable Rules of UX by Jakob Nielsen</h2>
         <p>Week 2, reflections on video by Jakob Nielsen</p>
         </br> 
-       
+       <p>Jakob Nielsen’s video "The Immutable Rules of UX" was highly interesting take in the real-world challenges in UX and also, 
+         good insider look into rules that almost always apply, no matter what the situation. You can watch the video HERE.</p>
+      <p>UX process is never a straightforward process. Nielsen’s video highlighted how diverse process of UX design actually is. UX, 
+        like Nielsen says, revolves around people and people are complex beings therefore designing for people is a complex process. 
+        Most of the rules presented, such as test before launch, could be stated as obvious part of the process but surprisingly at 
+        times overlooked. This was surprising for me to learn. </p>
+      <p>What really spoke to me was Nielsen talking about doing early-stage changes to your design, so you don’t get attached to 
+        your solution. It is easier to kill a project or do complete overhaul in the beginning rather than further in the design process 
+        when you might have already developed emotional attachments to your design. Bringing new viable ideas to the table and killing old 
+        ones gets harder, even though it would be for the better of the project. This is a guideline I will be following in my future projects, 
+        and I find it highly beneficial for any project development, UX or not.</p>
+      <p>What also I found interesting was Nielsen talking about user expectations versus UX design developments along the years. Nielsen talked 
+        how we are in this loop of constantly catching up to user expectations. We are not gradually getting worse; we are trying to keep up with 
+        user learning from more and more advanced programs. User expectations develop as we keep feeding them more and more efficient solutions. 
+        Users gets familiarized with the high efficiency level and expect that from the future programs too. So user and UX design both walk hand 
+        in hand evolving together, meaning that UX design has to keep one step forward of users when they are designing.</p>
         
     </article>
   </section>
