--- a/a4.html
+++ b/a4.html
@@ -47,7 +47,7 @@
         <p>Week 2, reflections on video by Jakob Nielsen</p>
         </br> 
        <p>Jakob Nielsen’s video "The Immutable Rules of UX" was highly interesting take in the real-world challenges in UX and also, 
-         good insider look into rules that almost always apply, no matter what the situation. You can watch the video HERE.</p>
+         good insider look into rules that almost always apply, no matter what the situation. You can watch the video  <a href="https://youtu.be/OtBeg5eyEHU" target="_blank">HERE</a>.</p>
       <p>UX process is never a straightforward process. Nielsen’s video highlighted how diverse process of UX design actually is. UX, 
         like Nielsen says, revolves around people and people are complex beings therefore designing for people is a complex process. 
         Most of the rules presented, such as test before launch, could be stated as obvious part of the process but surprisingly at 
