--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
         <a href="a3.html" title="A3: Building Team Web Portfolio">A3: Building Team Web Portfolio</a>
         <a href="a4.html" title="A4: The Immutable Rules of UX by Jakob Nielsen">A4: The Immutable Rules of UX by Jakob Nielsen</a>
+        <a href="a5.html" title="A5: Working as a Digital Designer">A5: Working as a Digital Designer</a>
       </div>
     </div>
   </div>
