--- a/a5.html
+++ b/a5.html
@@ -47,7 +47,21 @@
         <h2>A5: Working as a Digital Designer</h2>
         <p>Week 2, reflections on Félix Meens video </p>
         </br> 
-       
+         <p>I found Félix Meens’ video being exactly what I was hoping to gain information from. I started my studies with 
+         Software Development and quickly learned the subject didn’t bring me professional enjoyment. After changing my major to 
+         Digital Services I feel like I have something to give and learning about possible jobs is what I wanted to acquire and have 
+         been trying to acquire for some time, so the video really resonated with my possible future career choices.</p>
+        <p>I wish to focus on digital design due to its versatility and art and service based nature. Problem solving is also very high 
+          on my list of tasks I enjoy naturally. I have previous education in classic arts and long work history in customer service jobs. 
+          I feel like digital design or digital services could merge that. My goal is to focus on user interface design and the betterment of 
+          overall user experience with variety of system visuals. </p>
+        <p>I have learned that digital designer can be multiple things but that is exactly why I find this field interesting because 
+          it’s not limited into small narrow box but rather gives “artistic freedom” to your professional life. Basic work frame stays the 
+          same even though the nature of work can vary which I personally have always preferred in my jobs. </p>
+        <p>What surprised me was the highlight on soft skills instead of hard skills. I have always thought the demand for hard skills is 
+          higher than soft skills. Personally, my stronger side has always been soft skills and I fear even lacking in some aspects on hard skills.
+          But I do agree, influencing people is a big part of being a designer, no matter the task or work. People will hire you again if they enjoy 
+          working with you so basically being a designer is also selling yourself as a product to employer or project. </p>
         
     </article>
   </section>
