--- a/a3.html
+++ b/a3.html
@@ -33,6 +33,7 @@
         <a href="a3.html" title="A3: Building Team Web Portfolio">A3: Building Team Web Portfolio</a>
         <a href="a4.html" title="A4: The Immutable Rules of UX by Jakob Nielsen">A4: The Immutable Rules of UX by Jakob Nielsen</a>
         <a href="a5.html" title="A5: Working as a Digital Designer">A5: Working as a Digital Designer</a>
+        <a href="a6.html" title="A6: Living with Complexity">A6: Living with Complexity</a>
       </div>
     </div>
   </div>
