--- a/a4.html
+++ b/a4.html
@@ -34,6 +34,7 @@
         <a href="a4.html" title="A4: The Immutable Rules of UX by Jakob Nielsen">A4: The Immutable Rules of UX by Jakob Nielsen</a>
         <a href="a5.html" title="A5: Working as a Digital Designer">A5: Working as a Digital Designer</a>
         <a href="a6.html" title="A6: Living with Complexity">A6: Living with Complexity</a>
+        <a href="a7.html" title="A7: Reflections on Map, Sketch, and Decide">A7: Reflections on Map, Sketch, and Decide</a>
       </div>
     </div>
   </div>
