--- a/a7.html
+++ b/a7.html
@@ -47,7 +47,7 @@
   
     <article>
         <h2>A7: Reflections on Map, Sketch, and Decide</h2>
-        <p>Week 3, reflections on Don Norman's video </p>
+        <p>Week 4, Reflections from the Map, Sketch, and Decide phases </p>
         </br> 
          
         
