--- a/a6.html
+++ b/a6.html
@@ -49,7 +49,30 @@
         <h2>A6: Living with Complexity</h2>
         <p>Week 3, reflections on Don Norman's video </p>
         </br> 
-         
+        <p>Don Norman’s video was an interesting piece and had a lot of very good points giving you a completely new look on how 
+          to approach digital design and how you should learn digital design. In the beginning of his video Norman questioned the methods 
+          we are taught design in modern schools. Rather than exploring and learning together, universities but high weight on analysing and focusing 
+          reaching goals alone, thriving for excellency rather than improvement.  </p>
+        <p>Norman gave us a question “does our training actually give us the right background to design complex systems?” Designing takes some knowledge 
+          on not only technology but people and most importantly the world too. How things work. Understanding that good design is more than just design 
+          craft but understanding social systems, laws, profession fields such as medicine for example. I learned that you could be the best possible 
+          designer in your craft, but it would mean nothing without further understanding of world and how things work. That there are so much more than 
+          just design craft skills that needs to be taken into consideration. </p>
+        <p>Another key finding I would take away from Norman’s talk was how necessarily the lack of that knowledge is not a bad thing. Norman was talking 
+          a lot about so called “stupid questions”. He stated that stupid questions can be the profound questions that can ground brake the design. If there 
+          is no previous knowledge of conditioning to how things work, it can open mind to view matters from different perspective and therefore offer a 
+          surprising solution. I learned that most of the times when why something is done the way it is done usually doesn’t have any valid reason behind it, 
+          we are just accustomed to do so, no matter if it’s the best possible option available or not. There is always room for betterment if the mind stays open. </p>
+        <p>Norman was talking also different ways of thinking. How to make things and designs in information technology more understandable for people we must understand 
+          different ways of thinking. Computer scientists think in maths, us designers think through trying and exploring. I learned that to utilize the best possible 
+          set of skills we have to be able to understand each other and feature the largest possible set of skills. Teamwork instead of solo work. </p>
+        <p>One key finding is going to stick with me. Norman said he applies in his work a method of not even trying to solve the problem. He calls designers problem 
+          definers not problem solvers. Usually, the problem presented is not really the actual problem. If you figure out the problem and its nature or quality, you 
+          will most likely solve the problem itself without forcing to provide a solution. This will in the future affect my approach on design problems.</p>
+        <p>Another interesting point was on the later part of video when Norman returned to university level training of design students. He highlighted yet again 
+          the importance of work together, especially with his chess team example. I have to agree with his view on collaboration in learning. It is important to work 
+          together to use the best possible collective of knowledge and views and this should be applied more in university work. Ability to join forces and learn from 
+          each other than alone. To know how to put the knowledge together for something better.</p>
         
     </article>
   </section>
